<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="50dp"
                    android:text="@string/header"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    tools:text="@string/header" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/history_icon"
                    app:srcCompat="@drawable/history"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sales"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextNumberDecimal2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/box"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textColor="#000000"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/percent"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextNumberDecimal3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/box"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sales_minus_shares"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextNumberDecimal4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/box"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textColor="#000000"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sales_share"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextNumberDecimal5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/box"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textColor="#000000"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="120dp"
                        android:layout_weight="1"
                        android:background="#000000"
                        android:text="@string/button" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>